kubernetes-manifests/gitlab/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  namespace: gitlab
  labels:
    app: gitlab
spec:
  type: LoadBalancer
  selector:
    app: gitlab
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
